[package]
name = "pbf2graph"
version = "0.3.0"
authors = ["Denis Laprise <git@2ni.net>"]
edition = "2021"
description = "OSM Road Graph Extractor"
license = "BSD"
license-file = "LICENSE"
repository = "https://github.com/nside/pbf2graph"

[dependencies]
osmpbf = "*"
csv = "*"
clap = { version = "4.0.29", features = ["derive"] }
