[package]
name = "pbf2graph"
version = "0.4.0"
authors = ["Denis Laprise <git@2ni.net>"]
edition = "2021"
description = "OSM Road Graph Extractor"
license = "BSD-2-Clause"
repository = "https://github.com/nside/pbf2graph"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
osmpbf = "0.3.0"
ordered-float = "*"
